@@ -1,7 +1,7 @@
 buildscript {
     repositories {
 
-        maven { url "http://repo.dotcms.com/artifactory/libs-release" }
+        maven { url "https://repo.dotcms.com/artifactory/libs-release" }
         jcenter()
     }
     dependencies {
@@ -18,7 +18,7 @@ plugins {
 }
 
 project.ext {
-    aspectjVersion = '1.8.10'
+    aspectjVersion = '1.9.2'
 }
 
 
@@ -77,23 +77,32 @@ apply plugin: 'org.unbroken-dome.test-sets'
 apply plugin: 'project-report' /*For gradle dependencies: ./gradlew htmlDependencyReport*/
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+
+targetCompatibility = 1.8
+sourceCompatibility = 1.8
+
+// Compile Java.
+compileJava {
+    options.incremental = true
+    options.compilerArgs.addAll(['--release', '8'])
+}
+
 eclipse {
     project {
-        name = 'dotcms_5'
+        name = 'dotCMS'
     }
 }
 
 // In this section you declare where to find the dependencies of your project.
 repositories {
-    maven { url "http://repo.dotcms.com/artifactory/libs-release" }
-    maven { url "http://repo.dotcms.com/artifactory/libs-snapshot-local" }
+    maven { url "https://repo.dotcms.com/artifactory/libs-release" }
+    maven { url "https://repo.dotcms.com/artifactory/libs-snapshot-local" }
     maven { url 'https://jitpack.io' }
 }
 
 testSets {
     individualTest { dirName = 'test' }
     integrationTest { dirName = 'integration-test' }
-    functionalTest { dirName = 'functional-test' }
 }
 
 
@@ -137,7 +146,6 @@ idea {
 
         //Extra test source dirs
         testSourceDirs += file('integration-test/java')
-        testSourceDirs += file('functional-test/java')
     }
 }
 
@@ -155,10 +163,10 @@ dependencies {
     felix (group: 'org.osgi', name: 'org.osgi.compendium', version: '4.3.1') {
         transitive = false
     }
-    felix(group: 'org.apache.tika', name: 'tika-core', version: '1.17') {
+    felix(group: 'org.apache.tika', name: 'tika-core', version: '1.19') {
         transitive = false
     }
-    felix(group: 'org.apache.tika', name: 'tika-bundle', version: '1.17') {
+    felix(group: 'org.apache.tika', name: 'tika-bundle', version: '1.19') {
         transitive = false
     }
 
@@ -166,14 +174,15 @@ dependencies {
     felix group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25'
     felix group: 'com.dotcms.tika', name: 'com.dotcms.tika', version: '0.2'
 
-    felix group: 'com.dotcms.samlbundle', name: 'com.dotcms.samlbundle', version: '5.3.8'
+    felix group: 'com.dotcms.samlbundle', name: 'com.dotcms.samlbundle', version: '21.04'
+    felix group: 'com.dotcms.samlbundle.fragment', name: 'com.dotcms.samlbundle.fragment', version: '21.04'
     /**** And now the libs we pull in from internal company sources - libs stored in ./plugins, ./bin, ./libs, the starter site, etc. ****/
     compile fileTree("src/main/plugins/com.dotcms.config/build/jar").include('plugin-com.dotcms.config.jar')
 
-    starter group: 'com.dotcms', name: 'starter', version: 'empty_20200818', ext: 'zip'
+    starter group: 'com.dotcms', name: 'starter', version: 'empty_20210628', ext: 'zip'
     //Uncomment this line if you want to download the starter that comes with data
-    //starter group: 'com.dotcms', name: 'starter', version: '20200818', ext: 'zip'
-    testsStarter group: 'com.dotcms', name: 'starter', version: 'empty_20200818', ext: 'zip'
+    //starter group: 'com.dotcms', name: 'starter', version: '20210628', ext: 'zip'
+    testsStarter group: 'com.dotcms', name: 'starter', version: 'empty_20210628', ext: 'zip'
 
     profiler group: 'glowroot-custom', name: 'glowroot-agent', version: '0.13.1'
     profilerDependencies group: 'glowroot-custom', name: 'collector-https-linux', version: '0.13.1'
@@ -183,8 +192,6 @@ dependencies {
 
     individualTestCompile sourceSets.test.output
     integrationTestCompile sourceSets.test.output
-    functionalTestCompile sourceSets.test.output
-    functionalTestCompile sourceSets.integrationTest.output
 
     if (project.gradle.startParameter.taskNames.contains('deployWarTomcatDev') || project.gradle.startParameter.taskNames.contains('testDev')) {
         configurations.compile.exclude group: 'com.dotcms.enterprise', module: 'ee'
@@ -276,18 +283,11 @@ if (project.hasProperty('jarBaseName')) {
 def tomcatDistBase = "$distLocation/$tomcatDistInstallLocation-$tomcatInstallVersion"
 def dotcmsDistBase = "../$tomcatDistInstallLocation-$tomcatInstallVersion"
 
-// Compile Java.
-compileJava {
-    targetCompatibility = 1.8
-    sourceCompatibility = 1.8
-    options.incremental = true
-}
-
 jar{
     exclude 'com/dotcms/enterprise/**'
 
     if (gradle.startParameter.taskNames.contains("deployWarTomcatTests")) {
-        from project.sourceSets.main.output + project.sourceSets.test.output + project.sourceSets.integrationTest.output + project.sourceSets.functionalTest.output
+        from project.sourceSets.main.output + project.sourceSets.test.output + project.sourceSets.integrationTest.output
     }
 }
 
@@ -408,6 +408,10 @@ integrationTest {
                     systemProperty "databaseType", "$databaseType"
                 }
             }
+
+    if(JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        jvmArgs '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
+    }
 }
 integrationTest.group='dotCMS tests'
 
@@ -441,13 +445,13 @@ task prepareFelixForTests {
 prepareFelixForTests.group='dotCMS tests'
 prepareFelixForTests.description='Copies the felix bundle jars and the osgi-extra-generated.conf file to the specified felix home location'
 
-// Delete ROOT under tomcat8/webapps
+// Delete ROOT under tomcat9/webapps
 task undeployWarTomcat(type: Delete) {
     delete tomcatInstallLocation + webAppRootFolder
     followSymlinks = true
 }
 undeployWarTomcat.group='dotCMS Util'
-undeployWarTomcat.description='Removes /tomcat8/webapps folder. (reset tomcat)'
+undeployWarTomcat.description='Removes /tomcat9/webapps folder. (reset tomcat)'
 
 undeployWarTomcat.mustRunAfter 'backupWarTomcatData'
 
@@ -502,7 +506,7 @@ task clonePullTomcat(type: ClonePullTomcatTask) {
 
 }
 clonePullTomcat.group='dotCMS Util'
-clonePullTomcat.description='Clones or pull /tomcat8 folder.'
+clonePullTomcat.description='Clones or pull /tomcat9 folder.'
 
 //Executes clonePullTomcat task from dist version
 task clonePullTomcatDist(type: ClonePullTomcatTask) {
@@ -697,7 +701,11 @@ task buildPlugins(dependsOn: 'jar') {
             from "$buildDir/libs/"
         }
 
-        def pluginsFolder = new File("src/main/plugins");
+        println project.buildDir
+        println project.buildDir
+
+//        def pluginsFolder = new File("src/main/plugins");
+        def pluginsFolder = file('src/main/plugins')
 
         if (!pluginsFolder.exists()) {
             pluginsFolder = new File("../plugins");
@@ -944,13 +952,15 @@ class ClonePullTomcatTask extends DefaultTask{
 
     @TaskAction
     def pull(){
-        def folder = new File( tomcatLocation )
+        def folder = project.file( tomcatLocation )
+
+        println folder
         if( !folder.exists() ) {
 
             try {
 
                 println "Cloning the $project.tomcatInstallRepo, branch $project.tomcatInstallBranch on $tomcatLocation";
-                org.ajoberstar.grgit.Grgit.clone(dir: "$tomcatLocation", uri: "$project.tomcatInstallRepo", refToCheckout: "$project.tomcatInstallBranch")
+                org.ajoberstar.grgit.Grgit.clone(dir: folder.absolutePath, uri: "$project.tomcatInstallRepo", refToCheckout: "$project.tomcatInstallBranch")
             } catch (Exception exception) {
                 //Do nothing, this will fail only if git is not installed on this machine
             }
@@ -1000,6 +1010,7 @@ class DeployWarTomcatTask extends DefaultTask{
             from '../libs/buildlibs'
             into buildLibLocation + '/lib'
             include 'mail.jar'
+            include 'javax.activation-1.2.0.jar'
         }
 
     }
@@ -1016,8 +1027,10 @@ class NpmArtifactExtractTask extends DefaultTask {
     def extract() {
         project.mkdir(artifactFolder)
         String artifactUrl = "$url/$artifact"
-        String artifactVersion = version == 'latest'
-                ? new JsonSlurper().parse(new URL(artifactUrl))."dist-tags".latest
+        Set<String> knownTags = new HashSet<>(Arrays.asList("latest", "stable", "next", "rc"));
+
+        String artifactVersion = knownTags.contains(version)
+                ? new JsonSlurper().parse(new URL(artifactUrl))."dist-tags"[version]
                 : version
         String versionUrl = "$artifactUrl/-/$artifact-${artifactVersion}.tgz"
         println "Downloading from $versionUrl"
@@ -1042,12 +1055,12 @@ task cleanDotCmsWebComponents {
     delete './src/main/webapp/dotcms-webcomponents/package'
     delete './src/main/webapp/dotcms-webcomponents/dotcms-webcomponents.js'
     delete './src/main/webapp/dotcms-webcomponents/dotcms-webcomponents.esm.js'
-    delete './src/main/webapp/dotcms-webcomponents/index.esm.js'
 }
 
 task copyDotCmsUi(type: Copy) {
     from(file("./src/main/webapp/$angularFolder/package"))
     into("./src/main/webapp/$angularFolder")
+    finalizedBy 'deleteDotCmsUi'
 }
 
 task copyDotCmsWebComponents(type: Copy) {
@@ -1065,7 +1078,7 @@ task extractDotCmsUi(type: NpmArtifactExtractTask) {
     version = coreWebReleaseVersion
     dest = "./src/main/webapp/$angularFolder"
     dependsOn 'cleanDotCmsUi'
-    finalizedBy 'copyDotCmsUi', 'deleteDotCmsUi'
+    finalizedBy 'copyDotCmsUi'
 }
 extractDotCmsUi.group = 'extract dotcms-ui'
 extractDotCmsUi.description = 'Extracts package from dotcms-ui artifact to dotAdmin'
@@ -1097,7 +1110,6 @@ task downloadDependencies(type: Exec) {
     configurations.ajtools.files
     configurations.compileOnly.files
     configurations.default.files
-    configurations.functionalTestCompile.files
     configurations.individualTestCompile.files
     configurations.integrationTestCompile.files
     configurations.testCompile.files
